# exe_metadata

./: .gitignore  CMakeLists.txt  README.md  script_compile.bat  script_compile_test.bat
.github/workflows/: cmake-single-platform.yml  release-with-exe.yml
src/: main.cpp
test/: test.cpp
